2006-03-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: use db.THREAD to avoid 
	RUNRECOVERY error, fix cursors

2006-03-19  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: select person used for children
	* src/PeopleModel.py: used raw data functions for name display
	* src/NameDisplay.py: add raw functions for name display to 
	avoid the need to create a Name instance
	* src/SelectPerson.py: fixed widths

2006-03-18  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: add add_person functionality
	* src/DisplayTabs.py: add share option to sources
	* src/glade/gramps.glade: change dialog size
	* src/ListModel.py: fixed column widths, ellipses
	* src/SelectEvent.py: grab correct field
	* src/SelectSource.py: added

2006-03-18  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Remove scrollkeeper checks and other unused
	statements.

2006-03-18  Don Allingham  <don@gramps-project.org>
	* src/RelImage.py: removed
	* src/AddMedia.py: added scale_image function from RelImage
	* src/DataViews/_PersonView.py: use fixed width/height mode to
	prevent unnecessary reads during initialization. Prevent double
	loading of data from filter.
	* src/GrampsDb/_GrampsDbBase.py: provide widths for person view columns
	* src/RelLib/_Name.py: provide fast, shallow initialization of values
	for quick access when only name functions are needed
	* src/Editors/_EditFamily.py: Switch from ObjectSelector to SelectPerson
	until the ObjectSelector cursor issues are resolved
	* src/PeopleModel.py: Faster access to rebuilding data
	* src/Utils.py: handle if locale.getpreferredencondings fails
	* src/NameDisplay.py: speed up name display by using string join
	* src/GenericFilter.py: provide match function as a temporary fix until
	filters are redesigned
	* src/SelectPerson.py: used fixed width/height mode
	* src/PageView.py: suppress tooltips if requested

2006-03-17  Don Allingham  <don@gramps-project.org>